fixed gap on side smile

--- a/src/assets/styles/Index_style.css
+++ b/src/assets/styles/Index_style.css
@@ -28,7 +28,7 @@ body {
 }
 
 #bigImg {
-  width: 100vw; /* Full width of the viewport */
+  width: 100%; /* Full width of the viewport */
   height: auto;
   display: block;
   filter: brightness(50%);
@@ -137,7 +137,7 @@ body {
   position: relative;
   background-size: cover;
   background-position: center;
-  width: 100%;
+  width: 100vw;
   height: 100%;
   min-height: 900px;
   align-items: center;
@@ -259,7 +259,7 @@ body {
 }
 
 footer{
-  width:100%;
+  width:100vw;
   color: white;
   background-color: #333;
   position: absolute;
